# unoserver

./: .gitignore  CHANGELOG.md  CHANGES.rst  DEVELOPMENT.rst  README.rst  pyproject.toml  release
src/gotedo_unoserver/: __init__.py  client.py  comparer.py  converter.py  process_proxy.py  resource_tracker.py  server.py  slideshow.py
src/unoserver/: client.py  server.py  slideshow.py
tests/: conftest.py  presentation_test.odp  presentation_test.ppt  test_converter.py  test_integration.py  test_server.py  test_slideshow.py
tests/documents/: README.md  presentation_test.pptx
