[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gotedo-unoserver"
version = "1.0.0"
description = "A server for file conversions and slideshows with Libre Office"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Office/Business",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
keywords = ["libreoffice", "conversion", "documents", "uno", "unoconv", "slideshow", "presentations", "powerpoint"]
authors = [
    { name = "Ndianabasi Udonkang", email = "ndianabasi.udonkang@gmail.com" }
]
license = {text = "MIT"}
dynamic = ["readme"]
requires-python = ">= 3.8"

dependencies = [
    "screeninfo>=0.8.1",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
devenv = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "pyroma",
    "check-manifest",
    "zest.releaser",
]

[project.scripts]
unoserver = "unoserver.server:main"
unoconvert = "unoserver.client:converter_main"
unocompare = "unoserver.client:comparer_main"
unoping = "unoserver.client:ping_main"

[project.urls]
Homepage = "https://github.com/gotedo/unoserver"
Repository = "https://github.com/gotedo/unoserver"

[tool.setuptools]
packages = ["gotedo_unoserver"]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CONTRIBUTORS.rst", "CHANGES.rst"]}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.check-manifest]
ignore = """
.pre-commit-config.yaml
tests/*
tests/documents/*"""
